<resources>
    <string name="app_name">Hitchhiker´s weather guide to extraterrestial space</string>
    <string name="non_martian_string">Now : Non-Martian Locale-option!</string>
    <string name="feature_list_welcome_fragment_string">  • Martian weather API - Explore the martian weather and plan your extraterrestial visit accordingly! \n \n  • Shallow thought - An algorithm, no matter what input, outputting 42 (beta: might not be functioning at time of writing)\n</string>
    <string name="launch_welcome_fragment_string">Launch!</string>
    <string name="to_martian_weather_api_button_string_menu_fragment">Martian Weather API</string>
    <string name="shallow_thought_api_button_menu_fragment_string">Shallow Thought</string>
    <string name="back_button_text_menu_fragment">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shallow_thought_welcome_text">This part of our program is currently in its beta-version.\\n Our programmers are currently working on the advertised feature : An Algorithm that no matter the input outputs 42. Their labour has so far proved useless. \\n Until the product can be published in its finalized form we offer you this: An algorithm that no matter the question will output an answer, \"Shallow-thought-beta-version\".</string>
</resources>